--- a/undangan.html
+++ b/undangan.html
@@ -1,239 +1,221 @@
 <!DOCTYPE html>
 <html lang="id">
 <head>
-<meta charset="UTF-8">
-<title>Undangan Pernikahan</title>
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Undangan Pernikahan</title>
 
-<link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@500;700&family=Poppins:wght@300;400;500&display=swap" rel="stylesheet">
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css"/>
+  <!-- Fonts -->
+  <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;600&family=Poppins:wght@300;400;500&display=swap" rel="stylesheet">
 
-<style>
-:root{
-  --gold:#c9a24d;
-  --cream:#f7f3ea;
-  --dark:#333;
-}
-*{box-sizing:border-box}
-body{
-  margin:0;
-  font-family:'Poppins',sans-serif;
-  background:var(--cream);
-  color:var(--dark);
-  line-height:1.6;
-}
-section{
-  max-width:1000px;
-  margin:auto;
-  padding:60px 20px;
-  text-align:center;
-}
-h1,h2{
-  font-family:'Playfair Display',serif;
-  color:var(--gold);
-}
-.hero{
-  min-height:100vh;
-  background:linear-gradient(rgba(0,0,0,.55),rgba(0,0,0,.55)),
-  url("https://images.unsplash.com/photo-1523438885200-e635ba2c371e");
-  background-size:cover;
-  color:#fff;
-  display:flex;
-  align-items:center;
-  justify-content:center;
-}
-.hero button{
-  margin-top:20px;
-  padding:14px 30px;
-  border:none;
-  border-radius:40px;
-  background:var(--gold);
-  color:#fff;
-  font-size:16px;
-}
-.card{
-  background:#fff;
-  border-radius:20px;
-  padding:24px;
-  margin-top:24px;
-  box-shadow:0 10px 28px rgba(0,0,0,.08);
-}
-.couple{
-  display:grid;
-  grid-template-columns:1fr 1fr;
-  gap:24px;
-}
-.person img{
-  width:170px;height:170px;
-  border-radius:50%;
-  border:5px solid var(--gold);
-  object-fit:cover;
-}
-.countdown{
-  display:flex;
-  justify-content:center;
-  gap:14px;
-}
-.time{
-  background:#fff;
-  padding:14px;
-  width:80px;
-  border-radius:14px;
-}
-.time span{display:block;font-size:22px;color:var(--gold)}
-iframe{
-  width:100%;
-  height:320px;
-  border:none;
-  border-radius:18px;
-}
-.music-btn{
-  position:fixed;
-  bottom:20px;
-  right:20px;
-  width:56px;height:56px;
-  border-radius:50%;
-  background:var(--gold);
-  color:#fff;
-  display:flex;
-  align-items:center;
-  justify-content:center;
-  font-size:22px;
-}
-@media(max-width:768px){
-  .couple{grid-template-columns:1fr}
-}
-</style>
+  <!-- Icons -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"/>
+
+  <style>
+    body{
+      margin:0;
+      font-family:'Poppins',sans-serif;
+      background:#faf7f2;
+      color:#333;
+    }
+    h1,h2,h3{
+      font-family:'Playfair Display',serif;
+      color:#b89b5e;
+      margin-bottom:10px;
+    }
+    section{
+      padding:60px 20px;
+      max-width:900px;
+      margin:auto;
+      text-align:center;
+    }
+    .hero{
+      min-height:100vh;
+      background:linear-gradient(rgba(255,255,255,.85),rgba(255,255,255,.85)),
+      url('https://images.unsplash.com/photo-1523438885200-e635ba2c371e') center/cover;
+      display:flex;
+      align-items:center;
+      justify-content:center;
+      flex-direction:column;
+    }
+    .hero h1{font-size:42px;}
+    .hero p{font-size:16px;}
+    .card{
+      background:#fff;
+      border-radius:18px;
+      padding:30px;
+      margin-top:20px;
+      box-shadow:0 10px 30px rgba(0,0,0,.05);
+    }
+    .grid-2{
+      display:grid;
+      grid-template-columns:1fr 1fr;
+      gap:20px;
+    }
+    @media(max-width:768px){
+      .grid-2{grid-template-columns:1fr;}
+      .hero h1{font-size:32px;}
+    }
+    iframe{
+      width:100%;
+      border:none;
+      border-radius:12px;
+      height:300px;
+    }
+    .countdown{
+      display:flex;
+      justify-content:center;
+      gap:15px;
+      margin-top:20px;
+    }
+    .countdown div{
+      background:#fff;
+      padding:15px;
+      border-radius:12px;
+      min-width:70px;
+    }
+    .btn{
+      display:inline-block;
+      margin-top:20px;
+      padding:14px 26px;
+      background:linear-gradient(135deg,#d6b36a,#b89b5e);
+      color:#fff;
+      border-radius:30px;
+      text-decoration:none;
+      font-weight:500;
+    }
+    footer{
+      padding:40px 20px;
+      text-align:center;
+      font-size:14px;
+      color:#777;
+    }
+    .music-btn{
+      position:fixed;
+      bottom:20px;
+      right:20px;
+      background:#b89b5e;
+      color:#fff;
+      width:55px;
+      height:55px;
+      border-radius:50%;
+      display:flex;
+      align-items:center;
+      justify-content:center;
+      font-size:20px;
+      cursor:pointer;
+      box-shadow:0 10px 20px rgba(0,0,0,.2);
+      z-index:99;
+    }
+  </style>
 </head>
 
 <body>
 
+<!-- AUDIO -->
+<audio id="musicPlayer" loop></audio>
+
+<div class="music-btn" onclick="toggleMusic()">
+  <i class="fas fa-music"></i>
+</div>
+
+<!-- HERO -->
 <section class="hero">
-  <div>
-    <div>THE WEDDING OF</div>
-    <h1 id="heroNames">Nama & Pasangan</h1>
-    <p id="heroDate">Tanggal</p>
-    <button onclick="openInvitation()">Buka Undangan</button>
+  <p>The Wedding Of</p>
+  <h1 id="nama">(Nama) & (Pasangan)</h1>
+  <p id="tanggal">Tanggal Acara</p>
+  <a href="#detail" class="btn">Lihat Undangan</a>
+</section>
+
+<!-- DETAIL -->
+<section id="detail">
+  <h2>Detail Acara</h2>
+  <div class="card grid-2">
+    <div>
+      <h3>Akad Nikah</h3>
+      <p id="akad">-</p>
+    </div>
+    <div>
+      <h3>Resepsi</h3>
+      <p id="resepsi">-</p>
+    </div>
   </div>
 </section>
 
-<section id="content">
-<h2>Pasangan</h2>
-<div class="couple">
-  <div class="person card">
-    <img id="imgGroom">
-    <h3 id="groomName"></h3>
-    <p id="groomParents"></p>
+<!-- COUNTDOWN -->
+<section>
+  <h2>Hitung Mundur</h2>
+  <div class="countdown">
+    <div><h3 id="d">0</h3><small>Hari</small></div>
+    <div><h3 id="h">0</h3><small>Jam</small></div>
+    <div><h3 id="m">0</h3><small>Menit</small></div>
+    <div><h3 id="s">0</h3><small>Detik</small></div>
   </div>
-  <div class="person card">
-    <img id="imgBride">
-    <h3 id="brideName"></h3>
-    <p id="brideParents"></p>
+</section>
+
+<!-- STORY -->
+<section>
+  <h2>Kisah Cinta</h2>
+  <div class="card">
+    <p id="cerita">-</p>
   </div>
-</div>
-
-<p style="margin-top:30px;font-style:italic">
-"Dan di antara tanda-tanda kekuasaan-Nya ialah Dia menciptakan pasangan-pasangan..."<br>
-<b>(QS. Ar-Rum: 21)</b>
-</p>
 </section>
 
+<!-- MAP -->
 <section>
-<h2>Detail Acara</h2>
-<div class="card" id="eventInfo"></div>
+  <h2>Lokasi Acara</h2>
+  <div class="card">
+    <p id="lokasi"></p>
+    <iframe id="mapEmbed"></iframe>
+    <br>
+    <a id="mapLink" class="btn" target="_blank">Buka di Google Maps</a>
+  </div>
 </section>
 
+<!-- SHARE -->
 <section>
-<h2>Hitung Mundur</h2>
-<div class="countdown">
-  <div class="time"><span id="d">0</span>Hari</div>
-  <div class="time"><span id="h">0</span>Jam</div>
-  <div class="time"><span id="m">0</span>Menit</div>
-  <div class="time"><span id="s">0</span>Detik</div>
-</div>
-</section>
-
-<section>
-<h2>Lokasi</h2>
-<div class="card">
-  <iframe id="mapsFrame"></iframe>
-  <a id="mapsBtn" target="_blank">Buka di Google Maps</a>
-</div>
+  <h2>Bagikan Undangan</h2>
+  <a class="btn" onclick="shareWA()">Bagikan via WhatsApp</a>
 </section>
 
 <footer>
-Terima kasih atas doa & restu Anda<br>
-<b id="footerNames"></b>
+  Dibuat dengan ❤️ oleh <strong>EtaWeb – AI Wedding Invitation</strong>
 </footer>
 
-<audio id="music" loop></audio>
-<div class="music-btn" onclick="toggleMusic()">
-  <i class="fa fa-music"></i>
-</div>
+<script src="script.js"></script>
 
 <script>
-const API="https://dry-mud-3b8ai-undangan-api.etaweb90.workers.dev";
-
-function openInvitation(){
-  document.getElementById("content").scrollIntoView({behavior:"smooth"});
-  playMusic();
-}
-
-function playMusic(){document.getElementById("music").play().catch(()=>{})}
 function toggleMusic(){
-  const a=document.getElementById("music");
-  a.paused?a.play():a.pause();
+  const audio = document.getElementById("musicPlayer");
+  if(!audio.src) return;
+  if(audio.paused) audio.play();
+  else audio.pause();
 }
 
-function mapEmbed(q){
-  return "https://www.google.com/maps?q="+encodeURIComponent(q)+"&output=embed";
-}
-function mapOpen(q){
-  return "https://www.google.com/maps?q="+encodeURIComponent(q);
-}
-
-function startCountdown(date){
-  const t=new Date(date).getTime();
+/* Countdown */
+function startCountdown(dateStr){
+  const target = new Date(dateStr).getTime();
   setInterval(()=>{
-    const dlt=t-Date.now(); if(dlt<0)return;
-    d.textContent=Math.floor(dlt/86400000);
-    h.textContent=Math.floor(dlt/3600000)%24;
-    m.textContent=Math.floor(dlt/60000)%60;
-    s.textContent=Math.floor(dlt/1000)%60;
+    const now = Date.now();
+    let diff = target - now;
+    if(diff < 0) diff = 0;
+    document.getElementById("d").innerText = Math.floor(diff/86400000);
+    document.getElementById("h").innerText = Math.floor(diff/3600000)%24;
+    document.getElementById("m").innerText = Math.floor(diff/60000)%60;
+    document.getElementById("s").innerText = Math.floor(diff/1000)%60;
   },1000);
 }
 
-async function loadInvite(){
-  const id=new URLSearchParams(location.search).get("id");
-  if(!id)return;
-  const r=await fetch(`${API}/invites?id=${id}`);
-  const j=await r.json();
-  const i=j.data.invite;
-  const p=j.data.photos||{};
-
-  heroNames.textContent=`${i.groom.name} & ${i.bride.name}`;
-  heroDate.textContent=i.date;
-  groomName.textContent=i.groom.name;
-  brideName.textContent=i.bride.name;
-  groomParents.textContent=`Putra dari Bapak ${i.groom.father} & Ibu ${i.groom.mother}`;
-  brideParents.textContent=`Putri dari Bapak ${i.bride.father} & Ibu ${i.bride.mother}`;
-  footerNames.textContent=`${i.groom.name} & ${i.bride.name}`;
-
-  imgGroom.src=p.groom;
-  imgBride.src=p.bride;
-
-  eventInfo.innerHTML=`
-  <b>Akad</b><br>${i.events.akad.date} • ${i.events.akad.time}<br>${i.events.akad.place}<br><br>
-  <b>Resepsi</b><br>${i.events.resepsi.date} • ${i.events.resepsi.time}<br>${i.events.resepsi.place}
-  `;
-
-  mapsFrame.src=mapEmbed(i.mapsQuery);
-  mapsBtn.href=mapOpen(i.mapsQuery);
-
-  music.src=i.music;
-  startCountdown(i.date);
+/* Share WA */
+function shareWA(){
+  const text = encodeURIComponent(
+    "Undangan Pernikahan\n\n" +
+    document.getElementById("nama").innerText +
+    "\n\n" + window.location.href
+  );
+  window.open("https://wa.me/?text=" + text);
 }
-document.addEventListener("DOMContentLoaded",loadInvite);
 </script>
+
 </body>
 </html>
